# pamtra

./: .         .txt  .coverage  .f2py_f2cmap  .gitignore  .gitmodules  .readthedocs.yml  LICENSE  Makefile  McSnow_adapt.py  McSnow_adapt_tests.ipynb  McSnow_adapt_v2.py  McSnow_adapt_v3.py  SB_in_McSnow.py  __general_utilities.py  __postprocess_McSnow.py  _version_creator.py  check_moments  data  descriptor_file_COSMO.txt  descriptor_file_COSMO2.txt  descriptor_file_exp.txt  example_input_089.0000.nc  fakePamtra  fullbin-acmev-example_ssrga-paras-arrays.ipynb  gmon.out  hape3Dplus = LesData[w].shape  hyd_coefs_acp  install.txt  install_levante_readmefirst.sh  meson.build  output.nc  pamtra.py  pamtra_140715  pyproject.toml  readMe.txt  readme.md  run_LMRT  run_LMRT_max.sh  run_params.nml  run_params.nml.template  (+8 more)
.ipynb_checkpoints/: McSnow_adapt_tests-checkpoint.ipynb  fullbin-acmev-example_ssrga-paras-arrays-checkpoint.ipynb
descriptorfiles/: descriptor_ac3.txt  descriptor_file_2m_crystal-uli.txt  descriptor_file_2m_crystal.txt  descriptor_file_2m_icon.txt  descriptor_file_COSMO2m.txt  descriptor_file_COSMO_1mom.txt  descriptor_file_COSMO_1mom_4.txt  descriptor_file_HAMP_all.txt  descriptor_file_exp.txt  descriptor_file_liudb.txt  descriptor_file_meso-nh.txt  descriptor_file_meso-nh_surus.txt
doc/: Makefile
doc/source/: conf.py  descriptorFile.rst  index.rst  inputFile.rst  installation.rst  pamtra.rst  pamtraDev.rst  physicalBasics.rst  physicalBasis.rst  pyPamtra.rst  settings.rst
examples/: PAMTRA interface ICON example passive-active-Doppler.ipynb  acloud-mirac_vs_icon-pamtra.ipynb  cosmo_example.py  ecmwf-pamtra_vs_polar_orbiting_satellites.ipynb  example_sensitivityToDensity.py  fullbin-acmev-example.ipynb  fullbin-acmev-example_ssrga-paras-arrays.ipynb  fullbin-haloac3-example_ssrga.ipynb  pamtra_create_RT4_files.py  pamtra_icon_groundbased.ipynb  pamtra_mie_vs_tmatrix.py  pamtra_vs_pyPamtra.nml  pamtra_vs_pyPamtra.py  pyPamTestCalibration.py  pyPamTestFullSpec.py  pyPamTestRayleigh.py  pyPamTest_radarDualPol.py  pyPamTest_radarZDR_Zrnic2000.py  pyPamTest_radarZDR_zrnic2000.py  pyPamTest_ssrg_hogan2014.py  pyPamtra_testBroadening.py  radarSpec_howto.py  radar_example.py  readme.md  run_all_examples.py  simple_passive.ipynb  surface_test.py
examples/scatfiles/: scat_-01.txt
examples/tools/: model2sat.py  satConv.py  swath.py
include/: error_report.interface
output/: RT3TB201005101500Exp7.6surus0.2Exp4.0surusExp8.0x001y001f089.00  fastem4.txt
profile/: example_input.lay  example_input.lev
profiles/: standard_prof_o.txt
py/: fakeNe.py  meteoSI.py  neWrapper.py  pp_setup.py  pyPamtra.py  pyPamtraImport.py  pyPamtraLibWrapper.py  pyPamtraPlotter.py
py/lib/: meteoSI.py  pyPamtra.py
pyPamtra/: __init__.py  core.py  importer.py  libWrapper.py  meteoSI.py  plot.py  tools.py
pyPamtra/fortranNamelist/: __init__.py  namelist.py  namelist_settings.py
python/: __init__.py  setup.py
python/pyPamtra/: __init__.py  core.py  descriptorFile.py  importer.py  libWrapper.py  meteoSI.py  pamtra.py  plot.py  riming.py  tools.py
python/pyPamtra/fortranNamelist/: __init__.py  namelist.py  namelist_settings.py  openanything.py
scripts/: createCheopsNodes.sh  createIGMKnodes.sh  getNoOfCpus.sh  installPyPamtraOnIGMK.sh  install_pyPamtra.sh  ppserver_setup.sh
src/: .f2py_f2cmap  .rt3.f90.kate-swp  Azimuth_Emissivity_Module.f90  CRTM_FastemX.f90  Foam_Utility_Module.f90  Fresnel.f90  Large_Scale_Correction_Module.f90  Liu.f90  Makefile  Reflection_Correction_Module.f90  Slope_Variance.f90  Small_Scale_Correction_Module.f90  a.out  allocate_jacobian_vars.f90  allocate_output_vars.f90  allocate_profile_vars.f90  allocate_vars.f90  allocate_vars_atmosphere.f90  amplq.lp.f.old  average_spectra.f90  avint.f90  azimuth_emissivity_module.f90  cal_scatt.f90  calc_moment.f90  calc_radar_spectrum.f90  calculate_active.f90  check_print.f90  cloud_ssp.f90  collect_boundary_output.f90  collect_output.f90  connect2tmatrix.f90  constants.f90  conversions.f90  convolution.f90  cosmo_netcdf.f90  data.f90  dda_db_hong.f90  dda_db_liu.f90  deallocate_everything.f90  deallocate_jacobian_vars.f90  (+187 more)
test/: compareAscii.sh  compareNetcdf.sh  dumpNetcdf.py  runPythonTest.py  runPythonTest1.py  runPythonTest2.py  runPythonTest3.py  testResult.txt
test/nmls/: test1.nml  test2.nml  test3.nml  test4.nml  test5.nml  test6.nml  test_nml
test/referenceOutput/: python1.pickle  python2.pickle  python3.pickle  test1.txt  test2.txt  test3.txt
test/referenceOutput/1/: 201008181015Exp7.6icesf0.2Exp4.0surusExp8.0x001y001f024.00_active.txt  201008181015Exp7.6icesf0.2Exp4.0surusExp8.0x001y001f024.00_passive.txt  201008181015Exp7.6icesf0.2Exp4.0surusExp8.0x001y001f090.00_active.txt  (+22 more)
tools/: picklesLaunch.txt  readme.md
tools/dfftpack/: .gitignore  Makefile
tools/lapack/: README  make.inc
tools/picklePam/: pickleLaunch.sh  picklePam.py  picklePam1.py
tools/pp_scripts/: installPyPamtraOnIGMK.sh  nodesConfig.sh.template
tools/pyDia2Vel/: .f2py_f2cmap  Makefile  constants.f90  dia2vel.f90  dia2vel.py  file_mod.f90  kinds.f90  nml_params.f90  pyDia2vel.f90  pydia2vel.pyf  report_module.f90  rho_air.f90  vars_index.f90  viscosity_air.f90
tools/pyGasAbs/: .f2py_f2cmap  Makefile  pamtraGasAbs.py  plot_abs_spectrum.py  rosen98_gasabs.pyf
tools/pyRadarMoments/: Makefile  convolution.f90  dsort.f90  nan.f90  pyRadarMoments.f90  pyradarmoments.pyf  radarMoments.py  radar_hildebrand_sekhon.f90  radar_moments.f90  report_module.f90  smooth_savitzky_golay.f90
tools/pyRefIce/: Makefile  ref_ice.pyf
tools/pyRefWater/: .f2py_f2cmap  Makefile  constants.f90  dielec_water.f90  eps_water.f90  libRefIndex.f90  libRefIndex.pyf  ref_water.f90  ref_water.pyf  report_module.f90  settings.f90  vars_index.f90
tools/py_usStandard/: .gitignore  Makefile  readme.md  setup.py  usStandard.f90  usStandard.py  usStandardAtmosphere.pyf
tools/sqlite/: .gitignore  createTestFile  csvdata.f90  fsqlite.f90  makefile  runTest  somedata.csv  somedata.db
tools/virtual_machine/: Vagrantfile  install.sh  update.sh
(+35 files in other folders)
